fix bullet overflow

--- a/src/app/static/css/feed.less
+++ b/src/app/static/css/feed.less
@@ -3,5 +3,6 @@
 }
 
 .collapsible-header{
-	overflow: hidden;
+	text-overflow: ellipsis;
+  	text-wrap: none;
 }
